--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
-baseURL: http://example.org/
+baseURL: https://emprit.github.io
 languageCode: en-us
-title: Simple Site
+title: A Simple Site
 theme: PaperMod
 paginate: 5
+publishDir: public
 enableInlineShortcodes: true
 enableEmoji: true
 languages:
